Fix nav-toggle not visible in phone

--- a/src/containers/Portfolio/NavToggle/NavToggle.scss
+++ b/src/containers/Portfolio/NavToggle/NavToggle.scss
@@ -16,7 +16,7 @@
         right: 0rem;
     }
     @include respond(phone) {
-        display: none;
+        top: 5rem;
     }
     & span {
         position: relative;
